# advchlng

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  cheese.py  docker-compose.yml  pyproject.toml
swapi_data/apps/auth/migrations/: 0001_initial.py  0002_add_admin_user.py
swapi_data/apps/swexplorer/: admin.py  apps.py  handlers.py  models.py  tables.py  types.py  views.py
swapi_data/apps/swexplorer/migrations/: 0001_initial.py
swapi_data/apps/swexplorer/templates/swexplorer/: swapicollection_detail.html  swapicollection_insight.html  swapicollection_list.html
swapi_data/apps/swexplorer/tests/: mock_data.py  test_handler.py
swapi_data/apps/templates/: base.html
swapi_data/config/: asgi.py  settings.py  urls.py  wsgi.py
swapi_data/scripts/: entrypoint.sh  gunicorn.sh  wait-for-it.sh
